--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 
 <head>
-  <title>Ezy Math</title>
-  <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
+  <title> Math Solver</title>
+  <link rel="icon" type="image/x-icon" href="./assets/images/favicon.JPG">
   <!--
     - custom css link
   -->
@@ -39,7 +39,7 @@
       <nav class="navbar">
 
         <div class="navbar-brand">
-          <img src="./assets/images/easy math logo.webp" alt="Ezy Maths Logo">
+          <img src="./assets/images/favicon.JPG" alt="Logo">
         </div>
 
         <ul class="navbar-nav">
@@ -84,7 +84,7 @@
 
       <section class="home" id="home">
 
-        <div class="deco-shape shape-1">
+        <!-- <div class="deco-shape shape-1">
           <img src="./assets/images/shape-1.webp" alt="art shape" width="70">
         </div>
         <div class="deco-shape shape-2">
@@ -95,11 +95,11 @@
         </div>
         <div class="deco-shape shape-4">
           <img src="./assets/images/shape-4.webp" alt="art shape" width="30">
-        </div>
+        </div> -->
 
         <div class="home-left">
 
-          <p class="section-subtitle">Welcome To EzyMath</p>
+          <p class="section-subtitle">Welcome To Math Solver</p>
 
           <h1 class="main-heading">
             Get Solution in One
@@ -128,8 +128,8 @@
 
           <div class="img-box">
 
-            <img src="./assets/images/banner-img-bg.webp" alt="colorful background shape" class="background-shape">
-            <img src="./assets/images/banner-img.webp" alt="banner image" class="banner-img">
+            <img src="./assets/images/banner-img-bg.png" alt="colorful background shape" class="background-shape">
+            <img src="./assets/images/banner-img.png" alt="banner image" class="banner-img">
 
             <img src="./assets/images/banner-aliment-icon-1.webp" alt="" class="icon-1 smooth-zigzag-anim-1"
               width="250">
@@ -153,9 +153,9 @@
         <div class="about-left">
 
           <div class="img-box">
-            <img src="./assets/images/about-img-bg.webp" alt="about bg" class="about-bg">
+            <!-- <img src="./assets/images/about-img-bg.webp" alt="about bg" class="about-bg"> -->
 
-            <img src="./assets/images/about-img.webp" alt="about person" class="about-img">
+            <img src="./assets/images/about-img.png" alt="about person" class="about-img">
 
             <img src="./assets/images/banner-aliment-icon-1.webp" alt="" class="icon-1 smooth-zigzag-anim-1"
               width="250">
@@ -172,7 +172,7 @@
           <h2 class="section-title">We Have Best Maths Resources</h2>
 
           <p class="section-text">
-            Ezymath gives students the tools they need to fully understand and solve math problems. Ezymath is the most
+            Math Solver gives students the tools they need to fully understand and solve math problems. Math Solver is the most
             popular problem-solving resource for students, parents, and teachers, with millions of users and billions of
             problems solved.
           </p>
@@ -231,7 +231,9 @@
               <div class="wrapper border-bottom">
                 <div class="rating">
                   <ion-icon name="star"></ion-icon>
-                  <p>05 Calculators</p>
+                  <p>05 Calculators<p/>
+                  <p>  Mathematical Reasoning, Operations on Set, Types of Relations, Solve for X, Solve Fraction
+                  </p>
                 </div>
 
               </div>
@@ -256,6 +258,7 @@
                 <div class="rating">
                   <ion-icon name="star"></ion-icon>
                   <p>05 Calculators</p>
+                  <p>Circle, Parabola, Ellipse, Hyperbola, Paraboloid</p>
                 </div>
 
               </div>
@@ -280,6 +283,7 @@
                 <div class="rating">
                   <ion-icon name="star"></ion-icon>
                   <p>03 Calculators</p>
+                  <p>Algebraic Equations Formulas, Roots of Equation, Quadratic Equation Calculator</p>
                 </div>
 
               </div>
@@ -304,6 +308,7 @@
                 <div class="rating">
                   <ion-icon name="star"></ion-icon>
                   <p>04 Calculators</p>
+                  <p>Mathematical Reasoning, Operations on Set, Types of Relations, Solve for X, Solve Fraction</p>
                 </div>
 
               </div>
@@ -329,14 +334,11 @@
                 <div class="rating">
                   <ion-icon name="star"></ion-icon>
                   <p>04 Calculators</p>
+                  <p>Integration Formula, Inverse and Periodicity of Functions, Differentiation Formulae, Laplace</p>
                 </div>
-
               </div>
             </div>
-
           </div>
-
-
           <div class="course-card">
 
             <div class="course-banner">
@@ -353,6 +355,7 @@
                 <div class="rating">
                   <ion-icon name="star"></ion-icon>
                   <p>03 Calculators</p>
+                  <p>Percentage Change, Percentage Change of Shape, Square Root Calculator</p>
                 </div>
 
               </div>
@@ -376,6 +379,7 @@
                 <div class="rating">
                   <ion-icon name="star"></ion-icon>
                   <p>03 Calculators</p>
+                  <p>Statistics Formula, Standard Deviation, Confidence Interval</p>
                 </div>
 
               </div>
@@ -400,6 +404,7 @@
                 <div class="rating">
                   <ion-icon name="star"></ion-icon>
                   <p>04 Calculators</p>
+                  <p>Ops for 2 Complex Numbers, Complex Identities, Differentiation Formulae, Laplace</p>
                 </div>
 
               </div>
@@ -423,6 +428,7 @@
                 <div class="rating">
                   <ion-icon name="star"></ion-icon>
                   <p>01 Calculators</p>
+                  <p>Currency Convertor</p>
                 </div>
 
               </div>
@@ -526,7 +532,7 @@
             Education is life itself."
             <br>
           <div style="text-align: right; margin: right; width: 89%;
-            font-size: 27px;">- John Dewey</div>
+            font-size: 27px;">- Neha Sen</div>
           </p>
 
         </div>
@@ -548,7 +554,7 @@
               </div>
 
               <div class="client-detail">
-                <h4 class="client-name">Martina D'souza</h4>
+                <h4 class="client-name">Shreya</h4>
 
                 <p class="client-title">User</p>
               </div>
@@ -577,11 +583,16 @@
         <div class="grid-item">
 
           <p class="footer-text">
-            The long-term goal of Ezymath is to make high-quality on-demand math assistance available to all students.
-            Ezymath is an ambitious, long-term creative endeavour that will add new features and functionality over
-            time.
-          </p>
+           <p class="footer-text">
+  This Math Solver website is developed by Sayani Adak using HTML, CSS, and JavaScript.
+  It helps students solve mathematical problems easily and quickly.
+  <a href="https://www.linkedin.com/in/sayani-adak-648850291" target="_blank" class="linkedin-icon">
+  <ion-icon name="logo-linkedin"></ion-icon>
+</a>
+  
+</p>
 
+          </p>
           <div class="social-link">
             <a href="#">
               <ion-icon name="logo-facebook"></ion-icon>
@@ -646,19 +657,8 @@
   <script src="./assets/js/script.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-  <!--Start of Tawk.to Script-->
-  <script type="text/javascript">
-    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
-    (function () {
-      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
-      s1.async = true;
-      s1.src = 'https://embed.tawk.to/6370a451daff0e1306d72324/1gho03o3g';
-      s1.charset = 'UTF-8';
-      s1.setAttribute('crossorigin', '*');
-      s0.parentNode.insertBefore(s1, s0);
-    })();
-  </script>
-  <!--End of Tawk.to Script-->
+ 
 </body>
+
 
 </html>
